fixed media query spacing

--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,7 @@ button {
 
 @media only screen and (max-width: 750px) {
     body {
-        margin-top: auto;
+        margin-top: 5%;
         text-align: center;
     }
   }
